ie不兼容提示

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>monkey-pc</title>
+    <!--[if lte IE 10]>
+      <script>
+         alert('抱歉，您使用的ie浏览器版本太低无法浏览本网站，请升级到ie11或更换其他新版本的浏览器。')
+      </script>
+    <![endif]--> 
   </head>
   <body>
     <div id="app"></div>
