--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>monkey-pc</title>
     <!--[if lte IE 9]>
         <script>
-            var node=document.createElement("p");
-            var nodeText=document.createTextNode("抱歉，您使用的ie浏览器版本太低无法浏览本网站，请升级到ie11或更换其他浏览器。");
-            node.appendChild(nodeText);
-            document.getElementById('app').appendChild(node)
-            node.style.textAlign = 'center'
-            node.style.fontSize = '20px'
-            node.style.color = '#fff'
-            node.style.marginTop = '100px'
+            setTimeout(function() {
+                var node=document.createElement("p");
+                var nodeText=document.createTextNode("抱歉，您使用的ie浏览器版本太低无法浏览本网站，请升级到ie11或更换其他浏览器。");
+                node.appendChild(nodeText);
+                document.body.appendChild(node);
+                document.body.style.backgroundColor = '#1e384c'
+                node.style.cssText = 'text-align: center; font-size: 20px; color: #fff; position: absolute; top: 50%; width: 100%;'
+            });
         </script>
     <![endif]-->
 </head>
