--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>monkey-pc</title>
+    <title>公司中心</title>
     <!--[if lte IE 9]>
         <script>
             setTimeout(function() {
